--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -1,21 +1,17 @@
-trigger: none
+trigger: 
+- main
 
-stages:
-- stage: Deploy
-  jobs:
-  - deployment: helloWorld
-    displayName: 'Agent Setup'
-    environment: 
-      name: 'local-kubernetes-dev'
-    pool: 
-      name: Local-kubernetes
-      demands: 
-        - DEF_TYPE -equals build
-    strategy:
-        runOnce:
-          deploy:
-            steps:
-              - script: echo This runs in the default shell on any machine
-              - bash: |
-                  echo This multiline script always runs in Bash.
-                  echo Even on Windows machines!
+pool: 
+  name: Local-kubernetes
+  demands: 
+    - DEF_TYPE -equals build
+
+steps:
+ - task: Docker@2
+   displayName: Build an image
+   inputs:
+     repository: 'local/az-local-agent:${Build.SourceVersion}'
+     command: build
+     Dockerfile: image/azure-agent.dockerfile
+     buildContext: image
+     arguments: '--platform linux/x86_64'
