--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -15,7 +15,7 @@ steps:
  - task: Docker@2
    displayName: Build agent image
    inputs:
-     repository: 'local/az-local-agent:${Build.SourceVersion}'
+     repository: 'local/az-local-agent:$(Build.SourceVersion)'
      command: build
      Dockerfile: image/azure-agent.dockerfile
      buildContext: image
