--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -8,9 +8,9 @@ pool:
 
 
 steps:
- - bash: |
-    export GIT_SHORT_ID=$(echo $(Build.SourceVersion) | cut -c1-7 ) 
-
+ - bash: 
+    echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
+    
  - task: Docker@2
    displayName: Build agent image
    inputs:
@@ -18,5 +18,5 @@ steps:
      command: build
      Dockerfile: image/azure-agent.dockerfile
      buildContext: image
-     tags: $[GIT_SHORT_ID]
+     tags: "${github_sha_hash:0:7}"
      arguments: '--platform linux/x86_64'
