--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -23,6 +23,8 @@ steps:
 
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
+
+ - script: dir $(Build.SourcesDirectory)   
     
  - task: Docker@2
    displayName: Build agent image
