--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -19,6 +19,7 @@ workspace:
 
 steps:
  - checkout: self
+   path: workspace
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
  - task: Docker@2
@@ -26,8 +27,8 @@ steps:
    inputs:
      repository: 'local/az-local-agent'
      command: build
-     Dockerfile: image/azure-agent.dockerfile
-     buildContext: work/image
+     Dockerfile: workspace/image/azure-agent.dockerfile
+     buildContext: workspace/work/image
      tags: $(GIT_SHORT_ID)
      arguments: '--platform linux/x86_64'
  # Checkout config Repo
