--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -20,6 +20,9 @@ workspace:
 steps:
  - checkout: self
    path: workspace
+ - bash: "pwd"
+   name: "Listdir"
+     
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
  - task: Docker@2
