--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -24,8 +24,8 @@ steps:
    name: "CurrentDir"
  - bash: "ls -al"
    name: "ListDir"
-   
-     
+ - bash: "echo  '$(System.DefaultWorkingDirectory)'" 
+   name: "Workdir"  
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
  - task: Docker@2
