--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -18,8 +18,12 @@ workspace:
   clean: all 
 
 steps:
+ # Checkouts
  - checkout: self
    path: workspace
+ - checkout: configRepo
+   path: configRepo
+
  - bash: "pwd"
    name: "CurrentDir"
  - bash: "ls -al"
@@ -37,7 +41,3 @@ steps:
      buildContext: /workspace/work/image
      tags: $(GIT_SHORT_ID)
      arguments: '--platform linux/x86_64'
- # Checkout config Repo
- - checkout: configRepo
-   path: configRepo
-       
