Update build-pipeline.yaml for Azure Pipelines

--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -18,16 +18,10 @@ workspace:
   clean: all 
 
 steps:
- # Checkouts
+ # Checkouts main code
  - checkout: self
- - checkout: configRepo
 
- - bash: "pwd"
-   name: "CurrentDir"
- - bash: "ls -al"
-   name: "ListDir"
- - bash: "echo  '$(System.DefaultWorkingDirectory)'" 
-   name: "Workdir"  
+ # Build image
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
  - task: Docker@2
@@ -35,7 +29,10 @@ steps:
    inputs:
      repository: 'local/az-local-agent'
      command: build
-     Dockerfile: /workspace/image/azure-agent.dockerfile
-     buildContext: /workspace/work/image
+     Dockerfile: local-kubernetes-azure-agent-build/image/azure-agent.dockerfile
+     buildContext: local-kubernetes-azure-agent-build/image
      tags: $(GIT_SHORT_ID)
      arguments: '--platform linux/x86_64'
+
+ # Checkout config
+ - checkout: configRepo   
