Update build-pipeline.yaml for Azure Pipelines

--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -29,4 +29,5 @@ steps:
  - checkout: configRepo
 
  # Update deployment file
- - bash: yq -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' deployment.yaml
+ #- bash: yq -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' deployment.yaml
+ - bash: yq --help
