Update build-pipeline.yaml for Azure Pipelines

--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -29,4 +29,6 @@ steps:
  - checkout: configRepo
 
  # Update deployment file
- - bash: yq '.spec.template.spec.containers[].image' argocd-config/azure-build-agent/deployment.yaml
+ - bash:
+    cat argocd-config/azure-build-agent/deployment.yaml
+    yq '.spec.template.spec.containers[].image' argocd-config/azure-build-agent/deployment.yaml
