--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -30,4 +30,5 @@ steps:
 
  # Update deployment file
  - script: |
-    yq ".spec.template.spec.containers[].image" argocd-config/azure-build-agent/deployment.yaml
+    yq eval -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' argocd-config/azure-build-agent/deployment.yaml
+    cat argocd-config/azure-build-agent/deployment.yaml
