--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -27,12 +27,15 @@ steps:
 
  # Checkout config
  - checkout: configRepo
+   clean: true
    persistCredentials: true
 
  # Update deployment file
  - script: |
     yq eval -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' argocd-config/azure-build-agent/deployment.yaml
     cd argocd-config/
+    git config --global user.email "mkrieken@gmail.com"
+    git config --global user.name "Martin van Krieken"
     git add .
     git commit -m "New version for azure-build-agent/deployment.yaml"
     git push
