--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -36,6 +36,7 @@ steps:
     cd argocd-config/
     git config --global user.email "mkrieken@gmail.com"
     git config --global user.name "Martin van Krieken"
+    git fetch
     git checkout main
     yq eval -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' azure-build-agent/deployment.yaml
     git add .
