--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -37,7 +37,8 @@ steps:
     git config --global user.email "mkrieken@gmail.com"
     git config --global user.name "Martin van Krieken"
     git fetch
-    git checkout main
+    git branch -v -a
+    git switch main
     yq eval -i '.spec.template.spec.containers[].image = "local/az-local-agent:$(GIT_SHORT_ID)"' azure-build-agent/deployment.yaml
     git add .
     git commit -m "New version for azure-build-agent/deployment.yaml"
