--- a/build-pipeline.yaml
+++ b/build-pipeline.yaml
@@ -24,6 +24,16 @@ steps:
  # Build image
  - bash: 
     echo "##vso[task.setvariable variable=GIT_SHORT_ID]$(echo $(Build.SourceVersion) | cut -c1-7)"
+    
+ - task: Docker@2
+   displayName: Build agent image
+   inputs:
+     repository: 'local/az-local-agent'
+     command: build
+     Dockerfile: local-kubernetes-azure-agent-build/image/azure-agent.dockerfile
+     buildContext: local-kubernetes-azure-agent-build/image
+     tags: $(GIT_SHORT_ID)
+     arguments: '--platform linux/x86_64'
 
  # Checkout config
  - checkout: configRepo
